comment repo : mean9park.github.io

--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -30,7 +30,7 @@ layout: archive
 {% endfor %}
 
 <script src="https://utteranc.es/client.js"
-        repo="mean9park/comment"
+        repo="mean9park/mean9park.github.io"
         issue-term="pathname"
         theme="github-light"
         crossorigin="anonymous"
