--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -39,7 +39,7 @@ layout: archive
         data-emit-metadata="0"
         data-input-position="bottom"
         data-theme="light"
-        data-lang="ko"
+        data-lang="en"
         crossorigin="anonymous"
         async>
 </script>
