--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -30,10 +30,10 @@ layout: archive
 {% endfor %}
 
 <script src="https://giscus.app/client.js"
-        data-repo="mean9park/blog-comments"
-        data-repo-id="R_kgDOHKH1aw"
+        data-repo="mean9park/mean9park.github.io"
+        data-repo-id="R_kgDOHF1hjQ"
         data-category="Q&A"
-        data-category-id="DIC_kwDOHKH1a84COhFM"
+        data-category-id="DIC_kwDOHF1hjc4COhH6"
         data-mapping="pathname"
         data-reactions-enabled="1"
         data-emit-metadata="0"
