--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -1,8 +1,4 @@
----
-layout: default
----
-
-{% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
+--- layout: default --- {% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
   {% include page__hero.html %}
 {% endif %}
 
